Fix post center alignment

--- a/src/components/feed.css
+++ b/src/components/feed.css
@@ -8,21 +8,26 @@
   }
 
 .center {
-  display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
 }
 
 .caption{
   font-family: Arial, Helvetica, sans-serif;
   font-style:oblique;
   font-size: 20px;
-  font-weight:bolder
+  font-weight:bolder;
+  text-wrap:wrap;
+  max-width: 550px;
 }
-.socialFeed{
-  background-color:rgb(68, 220, 83);
+.socialFeed {
+  background-color: rgb(68, 220, 83);
   padding-bottom: 80px;
   padding-top: 15px;
-
+  display: flex; 
+  flex-direction: column; 
+  align-items: center; 
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
 }
